--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=crud
+
+server.port = 8091
+
+spring.mvc.view.prefix=/WEB-INF/jsp
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/JSPWithPostgresql
+spring.datasource.username=postgres
+spring.datasource.password=HomoDrid1985
+
+spring.jpa.hibernate.ddl-auto=create
